# camp2026-vision-cafe

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  components.json  docker-compose.override.yml  docker-compose.yml  eslint.config.js  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dockerignore  docker-compose.yml
backend/shared/: speakers.json
backend/src/: api.rs  assignment.rs  auth.rs  config.rs  error.rs  main.rs  oauth.rs  repository.rs  roster.rs  speakers.rs  state.rs  types.rs  validation.rs
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: participant-role-badge.test.tsx  participant-role-badge.tsx
frontend/src/lib/: auth-client.ts  vision-cafe-api.ts  vision-cafe.test.ts  vision-cafe.ts
frontend/src/routes/: auth-error-page.tsx  home-page.tsx
frontend/src/styles/: globals.css
src/app/: layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/lookup/: assignment-data.ts  lookup-client.tsx  page.tsx
src/app/select/: page.tsx  select-client.tsx  speaker-data.ts
src/components/ui/: accordion.tsx  alert.tsx  app-page-shell.tsx  badge.tsx  button.tsx  carousel.tsx  combobox.tsx  dialog.tsx  drawer.tsx  (+18 more)
src/hooks/: use-mobile.ts
src/lib/: vision-cafe-api.ts  vision-cafe.test.ts  vision-cafe.ts
src/types/: next-auth.d.ts
(+152 files in other folders)
